# boidflock

./: Cargo.toml  README.md
benches/: bench_boids.rs
src/: assets.rs  boid.rs  boid_cloud.rs  cliargs.rs  lib.rs  main.rs
src/boidstuff/: boid.rs  boid_cloud.rs  constants.rs  mod.rs
