[package]
name = "boids"
version = "0.1.0"
authors = ["Chris.Lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = {version="0.5", features=[]}
glam = {version="*", features=["mint"]}
rand = "*"
palette = "*"
structopt = {version="0.3", features=["color", "suggestions"]}
rand_xoshiro = "*"
rayon = "*"

[dev-dependencies]
criterion = {version= "0.3", features=["html_reports"]}

[[bench]]
name = "bench_boids"
harness = false